<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20"
        android:id="@+id/meitat"/>

    <TextView
        android:id="@+id/txtPantalla"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="0"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="60dp"
        android:gravity="end|center_vertical"
        android:inputType="numberDecimal|numberSigned"
        android:padding="15dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/meitat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


<TableLayout
    android:id="@+id/miTabla"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/meitat"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:padding="10dp">


<TableRow
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/btnMMin"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/BtnMMin"
        android:layout_marginHorizontal="5dp"
        android:textColor="@color/orange"
        android:backgroundTint="@color/darkblue"
        android:textSize="10pt"/>

    <Button
        android:id="@+id/btnMMax"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/BtnMMax"
        android:layout_marginHorizontal="5dp"
        android:backgroundTint="@color/darkblue"
        android:textColor="@color/orange"
        android:textSize="10pt"/>

    <Button
        android:id="@+id/btnMr"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/BtnMr"
        android:layout_marginHorizontal="5dp"
        android:backgroundTint="@color/darkblue"
        android:textColor="@color/orange"
        android:textSize="10pt"/>

    <Button
        android:id="@+id/btnMc"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/BtnMc"
        android:layout_marginHorizontal="5dp"
        android:backgroundTint="@color/darkblue"
        android:textColor="@color/orange"
        android:textSize="10pt"/>

</TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/Btn7"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textSize="10pt"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/Btn8"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textSize="10pt"/>

        <Button
            android:id="@+id/btn9"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/Btn9"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textSize="10pt"/>

        <Button
            android:id="@+id/btnMult"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/BtnMultiplica"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textColor="@color/orange"
            android:textSize="10pt"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/Btn4"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textSize="10pt"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/Btn5"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textSize="10pt"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/Btn6"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textSize="10pt"/>

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/BtnDivideix"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textColor="@color/orange"
            android:textSize="10pt"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/Btn1"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textSize="10pt"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/Btn2"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textSize="10pt"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/Btn3"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textSize="10pt"/>

        <Button
            android:id="@+id/btnResta"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/BtnResta"
            android:layout_span="2"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textColor="@color/orange"
            android:textSize="10pt"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn0"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/Btn0"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textSize="10pt"
            android:layout_span="2"/>

        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/BtnDecimal"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textSize="10pt"/>

        <Button
            android:id="@+id/btnSuma"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/BtnSuma"
            android:layout_span="1"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textColor="@color/orange"
            android:textSize="10pt"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/BtnIgual"
        android:layout_span="3"
        android:layout_marginHorizontal="5dp"
        android:backgroundTint="@color/orange"
        android:textSize="10pt"/>
        <Button
            android:id="@+id/btnC"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/BtnC"
            android:layout_span="1"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/darkblue"
            android:textColor="@color/red"
            android:textSize="10pt"/>
</TableRow>
</TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>